[package]
name    = "rustpaperscissors"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"
repository = "https://github.com/nebulaa44/rustpaperscissors"
description = "A RPS game in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"